# tope_updater

./: .coveragerc  .gitignore  BUGS.md  CLAUDE.md  README.md  STATUS.md  dev-requirements.txt  manual_test.sh  pyproject.toml  pytest.ini  requirements.txt  test_orangepi_checklist.md  test_orangepi_no_desktop.sh  test_systemd_refactor.py
.specify/memory/: constitution.md
deploy/: README.md  SYMLINK_SETUP.md  create_factory_version.sh  device-api.service.example  install.sh  setup_symlinks.sh  test_symlink_switch.sh  tope-updater.service  verify_setup.sh
docs/: DEPLOYMENT.md  E2E_TEST_SUMMARY.md  GO_REWRITE_ANALYSIS.md  PHASE2_COMPLETION_SUMMARY.md  ROLLBACK.md  SIMPLIFICATION_ANALYSIS.md
docs/plans/: 2026-02-26-gui-countdown-button.md
docs/testing/: ORANGEPI_NO_DESKTOP_GUIDE.md  ORANGEPI_TEST_GUIDE.md  test_orangepi_checklist.md  test_orangepi_no_desktop.sh
scripts/: convert_logo.py
specs/001-updater-core/: data-model.md  e2e-test-plan.md  plan.md  plan_cn.md  quickstart.md  research-httpx-resumable-downloads.md  research.md  spec.md  spec_cn.md  tasks.md  testing-guide.md
specs/002-gui/: layout-design.md  plan.md  plan_cn.md  spec.md  spec_cn.md  tasks.md
src/updater/: __init__.py  main.py
tests/: README.md  TESTING_GUIDE.md  conftest.py
tests/e2e/: README.md  conftest.py  simple_http_server.py  test_complete_flow.py  test_happy_path.py  test_http_server.py
tests/fixtures/: generate_test_packages.py
tests/integration/: test_reporter_integration.py
tests/manual/: create_full_test_package.py  create_test_package.py  test_deploy_flow.py  (+8 more)
(+48 files in other folders)
