[project]
name = "tope-updater"
version = "1.0.0"
description = "OTA Update Service for Embedded 3D Printer Devices"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "httpx==0.27.0",
    "aiofiles==24.1.0",
    "PySDL2>=0.9.16",
    "PySDL2-dll>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-html==4.1.1",
    "responses==0.25.0",
    "ruff==0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/updater"]
